--- a/src/app/components/default-layout/default-layout.component.html
+++ b/src/app/components/default-layout/default-layout.component.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
 <nav class="bg-white border-gray-200 dark:border-gray-600 dark:bg-gray-900">
   <div class="mx-auto flex max-w-screen-xl flex-wrap items-center justify-between px-4 py-2.5 md:px-6">
-    <a href="https://kayinleong.tech" class="flex items-center">
+    <a href="https://kayinleong.com" class="flex items-center">
       <img src="assets/images/Kayin_White_Small.webp" class="h-6 mr-3 sm:h-9" alt="Kayin Logo" fetchprority="veryhigh" loading="eager" />
       <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"></span>
     </a>
@@ -14,7 +14,7 @@
     <div id="mega-menu-full" class="items-center justify-between hidden w-full md:order-1 md:flex md:w-auto">
       <ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 dark:border-gray-700 dark:bg-gray-800 md:mt-0 md:flex-row md:space-x-8 md:border-0 md:bg-white md:text-sm md:font-medium md:dark:bg-gray-900">
         <li>
-          <a href="https://kayinleong.tech" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-blue-500" aria-current="page">Home</a>
+          <a href="https://kayinleong.com" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-blue-500" aria-current="page">Home</a>
         </li>
         <li>
           <button id="mega-menu-full-dropdown-button" data-collapse-toggle="mega-menu-full-dropdown" class="flex items-center justify-between w-full py-2 pl-3 pr-4 font-medium text-gray-700 rounded hover:bg-gray-100 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:w-auto md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-600 md:dark:hover:bg-transparent md:dark:hover:text-blue-500">
@@ -28,7 +28,7 @@
           <a routerLink="/" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-blue-500">Services</a>
         </li>
         <li>
-          <a href="mailto:job@mail.kayinleong.tech" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-blue-500">Contact Me</a>
+          <a href="mailto:job@mail.kayinleong.com" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-blue-500">Contact Me</a>
         </li>
       </ul>
     </div>
@@ -37,7 +37,7 @@
     <div class="grid max-w-screen-xl px-4 py-5 mx-auto text-gray-900 dark:text-white sm:grid-cols-2 md:px-6">
       <ul>
         <li>
-          <a href="https://kayinleong.tech/#about" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+          <a href="https://kayinleong.com/#about" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
             <div class="font-semibold">About Myself</div>
             <span class="text-sm font-light text-gray-500 dark:text-gray-400">
               A little bit about myself!
@@ -45,7 +45,7 @@
           </a>
         </li>
         <li>
-          <a href="https://kayinleong.tech/#experiences" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+          <a href="https://kayinleong.com/#experiences" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
             <div class="font-semibold">Experiences</div>
             <span class="text-sm font-light text-gray-500 dark:text-gray-400">
               🥸
@@ -53,7 +53,7 @@
           </a>
         </li>
         <li>
-          <a href="https://kayinleong.tech/showcases" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+          <a href="https://kayinleong.com/showcases" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
             <div class="font-semibold">Showcases</div>
             <span class="text-sm font-light text-gray-500 dark:text-gray-400">
               Next multimillion dolar apps 🍵.
@@ -61,7 +61,7 @@
           </a>
         </li>
         <li>
-          <a href="https://kayinleong.tech/#technical_skills" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+          <a href="https://kayinleong.com/#technical_skills" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
             <div class="font-semibold">Technical Skills</div>
             <span class="text-sm font-light text-gray-500 dark:text-gray-400">
               Red pill or blue pill?
@@ -71,7 +71,7 @@
       </ul>
       <ul>
         <li>
-          <a href="https://kayinleong.tech/#educations" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+          <a href="https://kayinleong.com/#educations" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
             <div class="font-semibold">Educations</div>
             <span class="text-sm font-light text-gray-500 dark:text-gray-400">
               (╯‵□′)╯︵┻━┻
@@ -79,7 +79,7 @@
           </a>
         </li>
         <li>
-          <a href="https://kayinleong.tech/#languages" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+          <a href="https://kayinleong.com/#languages" class="block p-3 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
             <div class="font-semibold">Languages</div>
             <span class="text-sm font-light text-gray-500 dark:text-gray-400">
               Selamat, 世界！
@@ -112,7 +112,7 @@
         </h2>
         <ul class="text-gray-600 dark:text-gray-400">
           <li class="mb-4">
-            <a href="mailto:job@mail.kayinleong.tech" class="hover:underline">Email</a>
+            <a href="mailto:job@mail.kayinleong.com" class="hover:underline">Email</a>
           </li>
           <li class="mb-4">
             <a href="https://www.linkedin.com/in/kayinleong/" target="_blank" rel="noopener noreferrer" class="hover:underline">LinkedIn</a>
@@ -133,7 +133,7 @@
   <hr class="my-6 border-gray-200 dark:border-gray-700 sm:mx-auto lg:my-8" />
   <div class="sm:flex sm:items-center sm:justify-between">
     <span class="text-sm text-gray-500 dark:text-gray-400 sm:text-center">
-      © 2023 Kayin Leong. All Rights Reserved. Taken by The Giraffe 🦒.
+      © 2024 Kayin Leong. All Rights Reserved.
     </span>
   </div>
 </footer>
