--- a/src/app/modules/home-module/home.component.html
+++ b/src/app/modules/home-module/home.component.html
@@ -30,7 +30,7 @@
   <div>
     <div class="max-w-md p-0.5 border border-gray-200 rounded-lg bg-gradient-to-br from-pink-500 to-orange-400 dark:bg-gray-800 dark:border-gray-700">
       <div class="pt-8 pb-5 bg-white rounded-md px-9">
-        <a href="https://pdftools.kayinleong.tech">
+        <a href="https://pdftools.kayinleong.com">
           <h3 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
             <span class="inline-block font-bold text-transparent bg-gradient-to-r from-purple-600 via-indigo-500 to-purple-400 bg-clip-text">WASM</span>
             <span class="inline-block font-bold text-transparent bg-gradient-to-r from-teal-200 to-lime-200 bg-clip-text">&nbsp;Blazor</span>
@@ -45,7 +45,7 @@
 
         <div class="flex justify-between mt-10">
           <span></span>
-          <a href="https://pdftools.kayinleong.tech" class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-bold text-gray-600 rounded-lg group bg-gradient-to-br from-pink-500 to-orange-400 group-hover:from-pink-500 group-hover:to-orange-400 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800">
+          <a href="https://pdftools.kayinleong.com" class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-bold text-gray-600 rounded-lg group bg-gradient-to-br from-pink-500 to-orange-400 group-hover:from-pink-500 group-hover:to-orange-400 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800">
             <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
               Preview
             </span>
